--- a/ex3/css/styls.css
+++ b/ex3/css/styls.css
@@ -23,7 +23,7 @@ footer{
    
 }
 #logo{
-    background-image: url(/images/logo.png);
+    background-image: url(../images/logo.png);
     background-repeat: no-repeat;
     background-position: center; 
     width: 99px;
